--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@ FACEBOOK: https://www.facebook.com/themefisher
       <div id="top-bar" class="top-bar">
         <div class="container">
           <div class="row">
-            <div class="col-lg-8 col-md-8">
-              <ul class="top-info text-center text-md-left">
+            <div class="col-lg-12 col-md-12">
+              <ul class="top-info text-center">
                 <li>
                   <i class="fas fa-map-marker-alt"></i>
                   <p class="info-text">Killa Pardi, Gujarat - IN - 396125</p>
@@ -155,7 +155,7 @@ FACEBOOK: https://www.facebook.com/themefisher
             </div>
             <!--/ Top info end -->
 
-            <div class="col-lg-4 col-md-4 top-social text-center text-md-right">
+            <!-- <div class="col-lg-4 col-md-4 top-social text-center text-md-right">
               <ul class="list-unstyled">
                 <li>
                   <a
@@ -186,7 +186,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   </a>
                 </li>
               </ul>
-            </div>
+            </div> -->
             <!--/ Top social end -->
           </div>
           <!--/ Content row end -->
@@ -290,20 +290,29 @@ FACEBOOK: https://www.facebook.com/themefisher
                           </ul> -->
                       </li>
 
-                      <li class="nav-item dropdown">
+                      <!-- <li class="nav-item dropdown">
                         <a
-                          href="#"
+                          href="about.html"
                           class="nav-link dropdown-toggle"
                           data-toggle="dropdown"
-                          >Company <i class="fa fa-angle-down"></i
-                        ></a>
+                          >About us <i class="fa fa-angle-down"></a>
                         <ul class="dropdown-menu" role="menu">
                           <li><a href="about.html">About Us</a></li>
-                          <!-- <li><a href="team.html">Our People</a></li> -->
-                          <!-- <li><a href="testimonials.html">Testimonials</a></li> -->
-                          <!-- <li><a href="faq.html">Faq</a></li> -->
-                          <!-- <li><a href="pricing.html">Pricing</a></li> -->
+                           <li><a href="team.html">Our People</a></li>
+                          <li><a href="testimonials.html">Testimonials</a></li>
+                          <li><a href="faq.html">Faq</a></li>
+                           <li><a href="pricing.html">Pricing</a></li>
                         </ul>
+                      </li> -->
+
+                      <li class="nav-item dropdown">
+                        <a href="about.html" class="nav-link dropdown-toggle"
+                          >About us</a
+                        >
+                        <!-- <ul class="dropdown-menu" role="menu">
+                          <li><a href="projects.html">Projects All</a></li>
+                          <li><a href="projects-single.html">Projects Single</a></li>
+                        </ul> -->
                       </li>
 
                       <li class="nav-item dropdown">
