footer and stats updated

--- a/projects.html
+++ b/projects.html
@@ -1901,14 +1901,14 @@ FACEBOOK: https://www.facebook.com/themefisher
               <div class="col-lg-3 col-md-6 mt-5 mt-lg-0 footer-widget">
                 <h3 class="widget-title">Services</h3>
                 <ul class="list-arrow">
-                  <li><a href="service-single.html">Pre-Construction</a></li>
-                  <li><a href="service-single.html">General Contracting</a></li>
+                  <li>Pre-Construction</li>
+                  <li>General Contracting</li>
                   <li>
-                    <a href="service-single.html">Construction Management</a>
+                    Construction Management
                   </li>
-                  <li><a href="service-single.html">Design and Build</a></li>
+                  <li>Design and Build</li>
                   <li>
-                    <a href="service-single.html">Self-Perform Construction</a>
+                    Self-Perform Construction
                   </li>
                 </ul>
               </div>
