--- a/about.html
+++ b/about.html
@@ -513,7 +513,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                 </div>
                 <div class="ts-facts-content">
                   <h2 class="ts-facts-num">
-                    <span class="counterUp" data-count="1789">0</span>
+                    <span class="counterUp" data-count="150">0</span>+
                   </h2>
                   <h3 class="ts-facts-title">Total Projects</h3>
                 </div>
@@ -547,7 +547,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                 </div>
                 <div class="ts-facts-content">
                   <h2 class="ts-facts-num">
-                    <span class="counterUp" data-count="4000">0</span>
+                    <span class="counterUp" data-count="4000">0</span>+
                   </h2>
                   <h3 class="ts-facts-title">Hours of Work</h3>
                 </div>
@@ -564,7 +564,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                 </div>
                 <div class="ts-facts-content">
                   <h2 class="ts-facts-num">
-                    <span class="counterUp" data-count="44">0</span>
+                    <span class="counterUp" data-count="20">0</span>+
                   </h2>
                   <h3 class="ts-facts-title">Cities Experience</h3>
                 </div>
@@ -1299,14 +1299,14 @@ FACEBOOK: https://www.facebook.com/themefisher
               <div class="col-lg-3 col-md-6 mt-5 mt-lg-0 footer-widget">
                 <h3 class="widget-title">Services</h3>
                 <ul class="list-arrow">
-                  <li><a href="service-single.html">Pre-Construction</a></li>
-                  <li><a href="service-single.html">General Contracting</a></li>
+                  <li>Pre-Construction</li>
+                  <li>General Contracting</li>
                   <li>
-                    <a href="service-single.html">Construction Management</a>
+                    Construction Management
                   </li>
-                  <li><a href="service-single.html">Design and Build</a></li>
+                  <li>Design and Build</li>
                   <li>
-                    <a href="service-single.html">Self-Perform Construction</a>
+                    Self-Perform Construction
                   </li>
                 </ul>
               </div>
