cities count change

--- a/projects.html
+++ b/projects.html
@@ -1673,7 +1673,7 @@ FACEBOOK: https://www.facebook.com/themefisher
         <div class="container">
           <div class="row text-center">
             <div class="col-lg-12">
-              <h3 class="section-sub-title">(2020-Present)</h3>
+              <h3 class="section-sub-title">(2020-Till date)</h3>
             </div>
           </div>
           <!--/ Title row end -->
