--- a/projects.html
+++ b/projects.html
@@ -1198,83 +1198,99 @@ FACEBOOK: https://www.facebook.com/themefisher
                 <tr>
                   <th>Sr. No.</th>
                   <th>Company Name</th>
+                  <th>Location</th>
                   <th>Type of Project</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
                   <td>1</td>
-                  <td>WelspunZucchi Textiles (Vapi –G.I.D.C)</td>
+                  <td>WelspunZucchi Textiles</td>
+                  <td>(Vapi –G.I.D.C)</td>
                   <td>RCC Building & Roads</td>
                 </tr>
                 <tr>
                   <td>2</td>
-                  <td>G.H.C.Limited –Bhilad</td>
+                  <td>G.H.C.Limited</td>
+                  <td>Bhilad</td>
                   <td>RCC Underground Tanks & Pipe Pushing Works</td>
                 </tr>
                 <tr>
                   <td>3</td>
-                  <td>Raymond LTD –Khadki</td>
+                  <td>Raymond LTD</td>
+                  <td>Khadki</td>
                   <td>Effluent Tanks & Discharge Pond</td>
                 </tr>
                 <tr>
                   <td>4</td>
-                  <td>Text Plast Industries Ltd-Wada,-Maharastra</td>
+                  <td>Text Plast Industries Ltd-Wada</td>
+                  <td>Maharastra</td>
                   <td>RCC Building Construction</td>
                 </tr>
                 <tr>
                   <td>5</td>
-                  <td>Ishan Industries Ltd, Dadra</td>
+                  <td>Ishan Industries Ltd</td>
+                  <td>Dadra</td>
                   <td>RCC Building Construction, Roads & Toilet Blocks</td>
                 </tr>
                 <tr>
                   <td>6</td>
-                  <td>S.K Food Industries Ltd –Pardi</td>
+                  <td>S.K Food Industries Ltd</td>
+                  <td>Pardi</td>
                   <td>RCC Building Const., Boiler Foundation & Warehouse</td>
                 </tr>
                 <tr>
                   <td>7</td>
-                  <td>Emami Ltd & Zandupharma ltd –Vapi/Silvassa</td>
+                  <td>Emami Ltd & Zandupharma ltd</td>
+                  <td>Vapi/Silvassa</td>
                   <td>RCC Building Const., Trimix Flooring, ETP Tanks</td>
                 </tr>
                 <tr>
                   <td>8</td>
-                  <td>Zenith Speciality Ltd ,Sarigam</td>
+                  <td>Zenith Speciality Ltd</td>
+                  <td>Sarigam</td>
                   <td>RCC Building Const., Roads, Underground Tanks</td>
                 </tr>
                 <tr>
                   <td>9</td>
-                  <td>MNF Valves Pvt. Ltd, Chikhli</td>
+                  <td>MNF Valves Pvt. Ltd</td>
+                  <td>Chikhli</td>
                   <td>RCC Building Const., Trimix Flooring, PEB Structure</td>
                 </tr>
                 <tr>
                   <td>10</td>
-                  <td>TRY County Dental Supply, Vagaldhara</td>
+                  <td>TRY County Dental Supply</td>
+                  <td>Vagaldhara</td>
                   <td>RCC Building Const., Trimix Flooring, PEB Structure</td>
                 </tr>
                 <tr>
                   <td>11</td>
-                  <td>Raj Mohan Residential Project, Dharampur</td>
+                  <td>Raj Mohan Residential Project</td>
+                  <td>Dharampur</td>
                   <td>RCC Residential Building Const.</td>
                 </tr>
                 <tr>
                   <td>12</td>
-                  <td>Navsari Agriculture Guesthouse, Navsari</td>
+                  <td>Navsari Agriculture Guesthouse</td>
+                  <td>Navsari</td>
                   <td>RCC Building Const.</td>
                 </tr>
                 <tr>
                   <td>13</td>
-                  <td>Navsari Agriculture ADM Building, Navsari</td>
+                  <td>Navsari Agriculture ADM Building</td>
+                  <td>Navsari</td>
                   <td>RCC Building Const.</td>
                 </tr>
                 <tr>
                   <td>14</td>
-                  <td>Architect Janakbhai Bhavsar, Valsad</td>
+                  <td>Architect Janakbhai Bhavsar</td>
+                  <td>Valsad</td>
                   <td>Residential Bungalow</td>
                 </tr>
                 <tr>
                   <td>15</td>
-                  <td>Smt. Poonam Mahajan, Sanjan</td>
+                  <td>Smt. Poonam Mahajan</td>
+                  <td>Sanjan</td>
                   <td>Residential Bungalow</td>
                 </tr>
               </tbody>
@@ -1299,158 +1315,189 @@ FACEBOOK: https://www.facebook.com/themefisher
                 <tr>
                   <th>Sr. No.</th>
                   <th>Company Name</th>
+                  <th>Location</th>
                   <th>Type of Project</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
                   <td>1</td>
-                  <td>Sabero Organics Gujrat Ltd, Sarigam</td>
+                  <td>Sabero Organics Gujrat Ltd</td>
+                  <td>Sarigam</td>
                   <td>RCC Ware House & Admin Building</td>
                 </tr>
                 <tr>
                   <td>2</td>
-                  <td>Raymond LTD, Khadki</td>
+                  <td>Raymond LTD</td>
+                  <td>Khadki</td>
                   <td>HDPE Pipeline & ETP Tanks</td>
                 </tr>
                 <tr>
                   <td>3</td>
-                  <td>Mr. Abhay Shah, Dadra</td>
+                  <td>Mr. Abhay Shah</td>
+                  <td>Dadra</td>
                   <td>Luxurious Bungalow at Royal Village</td>
                 </tr>
                 <tr>
                   <td>4</td>
-                  <td>Emami Ltd & Zandupharma Ltd, Vapi/Silvassa</td>
+                  <td>Emami Ltd & Zandupharma Ltd</td>
+                  <td>Vapi/Silvassa</td>
                   <td>RCC Building & ETP Works (Joint Venture)</td>
                 </tr>
                 <tr>
                   <td>5</td>
-                  <td>Radhe Instrumentation Ltd, Sachin</td>
+                  <td>Radhe Instrumentation Ltd</td>
+                  <td>Sachin</td>
                   <td>RCC Building Construction & Trimix Roads</td>
                 </tr>
                 <tr>
                   <td>6</td>
-                  <td>Ishan Industries Ltd, Dadra</td>
+                  <td>Ishan Industries Ltd</td>
+                  <td>Dadra</td>
                   <td>RCC Underground Tanks</td>
                 </tr>
                 <tr>
                   <td>7</td>
-                  <td>Shree Hardik Platting Tech., Vapi</td>
+                  <td>Shree Hardik Platting Tech</td>
+                  <td>Vapi</td>
                   <td>RCC Building & Trimix Road</td>
                 </tr>
                 <tr>
                   <td>8</td>
                   <td>Sumitomo Chemicals India Pvt. Ltd</td>
+                  <td>-</td>
                   <td>Godown Building</td>
                 </tr>
                 <tr>
                   <td>9</td>
                   <td>R3 Crop Care Pvt Ltd</td>
+                  <td>-</td>
                   <td>Plant Building</td>
                 </tr>
                 <tr>
                   <td>10</td>
                   <td>Essel Mining & Ind. Ltd. (Aditya Birla Group)</td>
+                  <td>-</td>
                   <td>Production Building</td>
                 </tr>
                 <tr>
                   <td>11</td>
                   <td>Micro Inks (Huber Group)</td>
+                  <td>-</td>
                   <td>Cooling Tower & Tank Farm</td>
                 </tr>
                 <tr>
                   <td>12</td>
-                  <td>Welspun Terry Towel India Ltd (Morai - Vapi)</td>
+                  <td>Welspun Terry Towel India Ltd</td>
+                  <td>(Morai - Vapi)</td>
                   <td>Raw Water Treatment Plant</td>
                 </tr>
                 <tr>
                   <td>13</td>
-                  <td>City Center (Silvassa)</td>
+                  <td>City Center</td>
+                  <td>Silvassa</td>
                   <td>Megha Mall</td>
                 </tr>
                 <tr>
                   <td>14</td>
-                  <td>Alok Industries Ltd (Morai - Vapi)</td>
+                  <td>Alok Industries Ltd</td>
+                  <td>Morai - Vapi</td>
                   <td>Godown Shed</td>
                 </tr>
                 <tr>
                   <td>15</td>
-                  <td>GHCL (Bhilad)</td>
+                  <td>GHCL</td>
+                  <td>Bhilad</td>
                   <td>RCC Road & Compound Wall</td>
                 </tr>
                 <tr>
                   <td>16</td>
-                  <td>Raymond Limited (Khadki)</td>
+                  <td>Raymond Limited</td>
+                  <td>Khadki</td>
                   <td>Pipeline Project</td>
                 </tr>
                 <tr>
                   <td>17</td>
-                  <td>Welspun Terry Towel India Ltd. (Morai - Vapi)</td>
+                  <td>Welspun Terry Towel India Ltd</td>
+                  <td>Morai - Vapi</td>
                   <td>Cotton Godown Shed</td>
                 </tr>
                 <tr>
                   <td>18</td>
                   <td>Galva Decoparts Pvt. Ltd.</td>
+                  <td>-</td>
                   <td>Plant Building</td>
                 </tr>
                 <tr>
                   <td>19</td>
-                  <td>APMC (Kaprada)</td>
+                  <td>APMC</td>
+                  <td>Kaprada</td>
                   <td>RCC Office Building</td>
                 </tr>
                 <tr>
                   <td>20</td>
-                  <td>APMC Pardi</td>
+                  <td>APMC</td>
+                  <td>Pardi</td>
                   <td>Trimix for Waghcheepa Subyard</td>
                 </tr>
                 <tr>
                   <td>21</td>
                   <td>Gotecha Group</td>
+                  <td>-</td>
                   <td>R.C.C. Industrial Building (Pardi)</td>
                 </tr>
                 <tr>
                   <td>22</td>
                   <td>Aashna Ifracon</td>
+                  <td>-</td>
                   <td>R. C. C. Residential Complex</td>
                 </tr>
                 <tr>
                   <td>23</td>
                   <td>Rohit Shah (M/s Aasha Nitro - Director)</td>
+                  <td>-</td>
                   <td>R. C. C. Residential Building</td>
                 </tr>
                 <tr>
                   <td>24</td>
                   <td>Quality Gears</td>
+                  <td>-</td>
                   <td>R. C. C. Industrial Shed (GIDC Pardi)</td>
                 </tr>
                 <tr>
                   <td>25</td>
                   <td>Rajan Electrical</td>
+                  <td>-</td>
                   <td>R. C. C. Industrial Building</td>
                 </tr>
                 <tr>
                   <td>26</td>
-                  <td>Spandan Multispeciality Hospital, Chikhli</td>
+                  <td>Spandan Multispeciality Hospital</td>
+                  <td>Chikhli</td>
                   <td>R.C.C Hospital Building</td>
                 </tr>
                 <tr>
                   <td>27</td>
-                  <td>Emami Limited, Dongri - Maharashtra</td>
+                  <td>Emami Limited, Dongri</td>
+                  <td>Maharashtra</td>
                   <td>R. C. C. Water Tank & Foundation</td>
                 </tr>
                 <tr>
                   <td>28</td>
-                  <td>Shantikunj Residential Appt., Pardi</td>
+                  <td>Shantikunj Residential Appt</td>
+                  <td>Pardi</td>
                   <td>R. C. C. Residential Building</td>
                 </tr>
                 <tr>
                   <td>29</td>
                   <td>Vastu Nirman - Arch. Prarthan Desai</td>
+                  <td>-</td>
                   <td>R. C. C. Commercial Building</td>
                 </tr>
                 <tr>
                   <td>30</td>
-                  <td>Coromandal International Ltd, Sarigam</td>
+                  <td>Coromandal International Ltd</td>
+                  <td>Sarigam</td>
                   <td>R.C.C. Industrial Building</td>
                 </tr>
               </tbody>
@@ -1683,6 +1730,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                 <tr>
                   <th>Sr. No.</th>
                   <th>Company Name</th>
+                  <th>Location</th>
                   <th>Type of Project</th>
                 </tr>
               </thead>
@@ -1690,132 +1738,164 @@ FACEBOOK: https://www.facebook.com/themefisher
                 <tr>
                   <td>1</td>
                   <td>Gangadhar Industries</td>
+                  <td>Pariya – Udwada</td>
                   <td>R.C.C. Industrial Building with Steel structure</td>
                 </tr>
                 <tr>
                   <td>2</td>
                   <td>Taparia Tools Ltd.</td>
+                  <td>TValwada (Umbergam)</td>
                   <td>R.C.C. Industrial Building</td>
                 </tr>
                 <tr>
                   <td>3</td>
                   <td>Nhb Ball & Roller Ltd.</td>
+                  <td>Bilimora</td>
                   <td>R.C.C. Industrial Building</td>
                 </tr>
                 <tr>
                   <td>4</td>
                   <td>Nhb Ball & Roller Ltd.</td>
+                  <td>Amalsad</td>
                   <td>R.C.C. Industrial Building</td>
                 </tr>
                 <tr>
                   <td>5</td>
                   <td>M/S. Polyols & Polymers Pvt. Ltd</td>
+                  <td>Dahej</td>
                   <td>R.C.C. Industrial Building with Steel structure</td>
                 </tr>
                 <tr>
                   <td>6</td>
                   <td>M/S. Suvidhi Industries</td>
+                  <td>Dahej</td>
                   <td>Chemical Plant</td>
                 </tr>
                 <tr>
                   <td>7</td>
                   <td>Om Vinyls Pvt. Ltd</td>
+                  <td>Ovada</td>
                   <td>R.C.C. Industrial Building with Steel structure</td>
                 </tr>
                 <tr>
                   <td>8</td>
                   <td>Hydrotronics Industries</td>
+                  <td>Bilimora-Gidc</td>
                   <td>R.C.C. Production Building</td>
                 </tr>
                 <tr>
                   <td>9</td>
                   <td>M/S. Suvidhi Industries</td>
+                  <td>Vapi</td>
                   <td>Chemical Plant</td>
                 </tr>
                 <tr>
                   <td>10</td>
                   <td>M/S. Tripcon Engineering Pvt. Ltd.</td>
+                  <td>Anand</td>
                   <td>R.C.C. Industrial Building with Steel structure</td>
                 </tr>
                 <tr>
                   <td>11</td>
                   <td>M/S. Deepak Nitrite Ltd.</td>
+                  <td>Dahej</td>
                   <td>Compound Wall & R.C.C. Bridge</td>
                 </tr>
                 <tr>
                   <td>12</td>
                   <td>M/S Parag Industrial Equipments Pvt Ltd</td>
+                  <td>Dahej</td>
                   <td>R.C.C. Industrial Building with Steel structure</td>
                 </tr>
                 <tr>
                   <td>13</td>
                   <td>M/S Xotik Frujus Pvt Ltd</td>
+                  <td>Damnan</td>
                   <td>Plant building for soft drink</td>
                 </tr>
                 <tr>
                   <td>14</td>
                   <td>Rushabh Pharma</td>
+                  <td>Panoli</td>
                   <td>Pharma plant, Reactor building & Intermediate plant</td>
                 </tr>
                 <tr>
                   <td>15</td>
                   <td>R P Industries (Weekend Home)</td>
+                  <td>Akoli Palanpur</td>
                   <td>Resort & Development</td>
                 </tr>
                 <tr>
                   <td>16</td>
                   <td>IDCM Industries OPC Pvt. Ltd.</td>
+                  <td>Saykha</td>
                   <td>R.C.C. Industrial Building</td>
                 </tr>
                 <tr>
                   <td>17</td>
                   <td>Synzeal Pharmachem.</td>
+                  <td>Saykha</td>
                   <td>R.C.C. Industrial Building</td>
                 </tr>
                 <tr>
                   <td>18</td>
                   <td>Khushboo Beauty Care</td>
+                  <td>Silvassa</td>
                   <td>R.C.C. Industrial Building</td>
                 </tr>
                 <tr>
                   <td>19</td>
                   <td>Mahindra Accelo Ltd.</td>
+                  <td>Vadodara</td>
                   <td>R.C.C. Industrial Building with Steel structure</td>
                 </tr>
                 <tr>
                   <td>20</td>
                   <td>Vitrag Chemicals Pvt. Ltd.</td>
+                  <td>Panoli</td>
                   <td>R.C.C. Industrial Building with Steel structure</td>
                 </tr>
                 <tr>
                   <td>21</td>
                   <td>Vitrag Chemicals Pvt. Ltd.</td>
+                  <td>Dahej</td>
                   <td>R.C.C. Industrial Building with Steel structure</td>
                 </tr>
                 <tr>
                   <td>22</td>
                   <td>Nilkanth Enviro Projects Pvt. Ltd.</td>
+                  <td>Saykha</td>
                   <td>R.C.C. Admin & Lab Building</td>
                 </tr>
                 <tr>
                   <td>23</td>
                   <td>Special Mover</td>
+                  <td>Ankleshwar</td>
                   <td>R.C.C. Industrial Building with Steel structure</td>
                 </tr>
                 <tr>
                   <td>24</td>
                   <td>Archian Foods India Pvt. Ltd.</td>
+                  <td>Bhilad</td>
                   <td>R.C.C. Industrial Building</td>
                 </tr>
                 <tr>
                   <td>25</td>
                   <td>Inovet Pharma</td>
+                  <td>Angam</td>
                   <td>R.C.C. Factory Building</td>
                 </tr>
                 <tr>
                   <td>26</td>
                   <td>Ishan Industries</td>
+                  <td>Dadra</td>
                   <td>R.C.C. Factory Building</td>
+                </tr>
+                <tr>
+                  <td>27</td>
+                  <td>Mr.Dental</td>
+                  <td>Ovada Dadra</td>
+                  <td>RCC Factory Building</td>
                 </tr>
               </tbody>
             </table>
