--- a/projects.html
+++ b/projects.html
@@ -998,7 +998,7 @@ FACEBOOK: https://www.facebook.com/themefisher
           <div class="row text-center">
             <div class="col-lg-12">
               <h3 class="section-sub-title">
-                List of some prestigeous clients
+                List of some prestigeous clients and projects (2003-2005)
               </h3>
             </div>
           </div>
@@ -1015,9 +1015,9 @@ FACEBOOK: https://www.facebook.com/themefisher
               <tbody>
                 <!-- Existing rows -->
                 <!-- Merged row -->
-                <tr>
+                <!-- <tr>
                   <td colspan="3" class="text-center">During 2003-2005</td>
-                </tr>
+                </tr> -->
                 <!-- New rows -->
                 <tr>
                   <td>1</td>
