phone email links added

--- a/contact.html
+++ b/contact.html
@@ -150,8 +150,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                         <div class="info-box-content">
                           <p class="info-box-title">Email Us</p>
                           <p class="info-box-subtitle">
-                            info.elephanta@gmail.com,
-                            9879593339c@gmail.com
+                            info.elephanta@gmail.com, 9879593339c@gmail.com
                           </p>
                         </div>
                       </div>
@@ -358,7 +357,24 @@ FACEBOOK: https://www.facebook.com/themefisher
                 </span>
                 <div class="ts-service-box-content">
                   <h4>Email Us</h4>
-                  <p>info.elephanta@gmail.com, 9879593339c@gmail.com</p>
+                  <p>
+                    <a
+                      href="mailto:info.elephanta@gmail.com"
+                      style="text-decoration: none; color: white"
+                      onmouseover="this.style.color='grey'; this.style.textDecoration='underline';"
+                      onmouseout="this.style.color='white'; this.style.textDecoration='none';"
+                    >
+                      info.elephanta@gmail.com </a
+                    >,
+                    <a
+                      href="mailto:9879593339c@gmail.com"
+                      style="text-decoration: none; color: white"
+                      onmouseover="this.style.color='grey'; this.style.textDecoration='underline';"
+                      onmouseout="this.style.color='white'; this.style.textDecoration='none';"
+                    >
+                      9879593339c@gmail.com
+                    </a>
+                  </p>
                 </div>
               </div>
             </div>
@@ -371,10 +387,22 @@ FACEBOOK: https://www.facebook.com/themefisher
                 </span>
                 <div class="ts-service-box-content">
                   <h4>Call Us</h4>
-                  <p>(+91) 98795-93339, (+91) 96383-25676</p>
+                  <p>
+                    <a href="tel:+919879593339" style="text-decoration: none; color: white;"
+                       onmouseover="this.style.color='grey'; this.style.textDecoration='underline';"
+                       onmouseout="this.style.color='white'; this.style.textDecoration='none';">
+                       (+91) 98795-93339
+                    </a>, 
+                    <a href="tel:+919638325676" style="text-decoration: none; color: white;"
+                       onmouseover="this.style.color='grey'; this.style.textDecoration='underline';"
+                       onmouseout="this.style.color='white'; this.style.textDecoration='none';">
+                       (+91) 96383-25676
+                    </a>
+                  </p>
                 </div>
               </div>
             </div>
+            
             <!-- Col 3 end -->
           </div>
           <!-- 1st row end -->
